# internal/handlers/projects_delete.go
@@ -1,61 +1,42 @@
 package handlers
 
 import (
+	"github.com/aerosystems/project-service/internal/services"
 	"github.com/labstack/echo/v4"
+	"net/http"
+	"strconv"
 )
 
 // ProjectDelete godoc
-// @Summary delete project by Project ID
+// @Summary delete project by ProjectId
 // @Tags projects
 // @Accept  json
 // @Produce application/json
-// @Param	projectID	path	string	true "Project ID"
+// @Param	projectId	path	string	true "ProjectId"
 // @Security BearerAuth
 // @Success 200 {object} Response
 // @Failure 400 {object} ErrorResponse
 // @Failure 401 {object} ErrorResponse
 // @Failure 403 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Failure 422 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /v1/projects/{projectID} [delete]
+// @Router /v1/projects/{projectId} [delete]
 func (h *BaseHandler) ProjectDelete(c echo.Context) error {
-	//// receive AccessToken Claims from context middleware
-	//accessTokenClaims, ok := r.Context().Value(helpers.ContextKey("accessTokenClaims")).(*AuthService.AccessTokenClaims)
-	//if !ok {
-	//	err := errors.New("could not get token claims from Access Token")
-	//	_ = WriteResponse(w, http.StatusUnauthorized, NewErrorPayload(401001, "could not get token claims from Access Token", err))
-	//	return
-	//}
-	//projectID, err := strconv.Atoi(chi.URLParam(r, "projectID"))
-	//if err != nil {
-	//	_ = WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422002, "request path param should be integer", err))
-	//	return
-	//}
-	//
-	//project, err := h.projectRepo.GetById(projectID)
-	//
-	//if errors.Is(err, gorm.ErrRecordNotFound) {
-	//	_ = WriteResponse(w, http.StatusNotFound, NewErrorPayload(404001, "project not found", err))
-	//	return
-	//}
-	//if err != nil {
-	//	_ = WriteResponse(w, http.StatusNotFound, NewErrorPayload(500001, "could not find Project by ProjectID", err))
-	//	return
-	//}
-	//
-	//// restrict access to project for users with role "startup" or "business"
-	//if project.UserId != accessTokenClaims.UserId && helpers.Contains([]string{"startup", "business"}, accessTokenClaims.UserRole) {
-	//	err := errors.New("user does not have access to this project")
-	//	_ = WriteResponse(w, http.StatusForbidden, NewErrorPayload(403001, err.Error(), err))
-	//	return
-	//}
-	//
-	//if err = h.projectRepo.Delete(project); err != nil {
-	//	_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500106, "could not delete Project", err))
-	//	return
-	//}
-	//
-	//_ = WriteResponse(w, http.StatusOK, NewResponsePayload(fmt.Sprintf("project ID %d successfuly deleted", projectID), nil))
-	return nil
+	accessTokenClaims, _ := c.Get("accessTokenClaims").(*services.AccessTokenClaims)
+	projectId, err := strconv.Atoi(c.Param("projectId"))
+	if err != nil {
+		return h.ErrorResponse(c, http.StatusBadRequest, "request path param should be integer", err)
+	}
+	if err := h.projectService.DetermineStrategy(accessTokenClaims.UserId, accessTokenClaims.UserRole); err != nil {
+		return h.ErrorResponse(c, http.StatusForbidden, "creating project is forbidden", err)
+	}
+	if project, err := h.projectService.GetProjectById(projectId); err != nil && project == nil {
+		return h.ErrorResponse(c, http.StatusNotFound, "project not found", err)
+	} else {
+		return h.ErrorResponse(c, http.StatusForbidden, "user does not have access to this project", err)
+	}
+	if err := h.projectService.DeleteProjectById(projectId); err != nil {
+		return h.ErrorResponse(c, http.StatusInternalServerError, "could not delete project", err)
+	}
+	return h.SuccessResponse(c, http.StatusOK, "project successfully deleted", nil)
 }
